--- a/WEB/src/app/home/home.component.html
+++ b/WEB/src/app/home/home.component.html
@@ -2,23 +2,24 @@
     <div class="w-100">
         <div class="row clearfix">
             <div class="col-lg-12 ">
-                <a class="logo " href="#"><img src="assets/images/logo.png" alt=""></a>
+                <a class="logo " href="#"><img src="assets/images/logo-edusure.png" alt=""></a>
                 <ul class="login-info">
                     <li><button class="user" (click)="setupDayZero()" *ngIf="user.role=='ADMIN'"> <span>DayZero</span></button></li>
-                    <li>{{ today | date:'MM/dd/yy h:mm:ss a' }}</li>
-                    <li><a class="user" [matMenuTriggerFor]="menu"><i class="material-icons">account_circle</i></a></li>
+                    <li>Last login {{ today | date:'MM/dd/yy h:mm:ss a' }}</li>
+                    <li><a class="info"><i class="fas fa-info-circle"></i></a></li>
+                    <li><a class="user" [matMenuTriggerFor]="menu"><i class="fas fa-user"></i></a></li>
                 </ul>
                 <mat-menu #menu="matMenu">
                     <button mat-menu-item>
-                      <mat-icon>account_box</mat-icon>
+                    <i class="fa fa-user" aria-hidden="true"></i>
                       <span>View Profile</span>
                     </button>
                     <button mat-menu-item>
-                      <mat-icon>calendar_today</mat-icon>
+                     <i class="fa fa-calendar" aria-hidden="true"></i>
                       <span>View Session</span>
                     </button>
                     <button mat-menu-item (click)="logout()">
-                      <mat-icon>power_settings_new</mat-icon>
+                      <i class="fa fa-sign-out" aria-hidden="true"></i>
                       <span>Logout</span>
                     </button>
                   </mat-menu>
@@ -26,4 +27,20 @@
         </div>
     </div>
 </header>
+<body> 
 <router-outlet></router-outlet>
+<footer class="footer-container">
+    <div class="container">
+        <div class="row clearfix">
+            <div class="col-md-6">
+                <select class="form-control">
+                    <option value="">English</option> 
+                </select>
+            </div>
+            <div class="col-md-6 text-right">
+                <p>Copyright, 2019 Company Name Rights Reserved, <a href="#">Terms and conditions</a></p>
+            </div>
+        </div>
+    </div>
+</footer>
+</body>
