--- a/WEB/src/app/public/login/login.component.html
+++ b/WEB/src/app/public/login/login.component.html
@@ -1,53 +1,38 @@
-<body>
-<div class="container">
-	<div class="d-flex justify-content-center h-100">
-		
-		<div class="card-container">
-			<div class="login-conetnt">
-			<div class="card-header">
-				<h3>Sign In</h3>
-				<div class="d-flex justify-content-end social_icon">
-					<span><i class="fab fa-facebook-square"></i></span>
-					<span><i class="fab fa-google-plus-square"></i></span>
-					<span><i class="fab fa-twitter-square"></i></span>
+<body class="login-container ">
+<div class="d-flex align-items-stretch">
+	<div class="container-fluid">
+		<div class="row clearfix">
+			<div class="col-md-7 slider d-flex align-items-center" [ngStyle]="{background: 'url(./assets/images/login.jpg) left bottom no-repeat'}">
+				<div class="welcome-text">
+					<h3>Welcome</h3>
+					<p>Grow yours business with us. Over 38,742 + insurance professionals already are. 
+					<br><br>Contact 24x7 toll free number.</p>
 				</div>
 			</div>
-			<div class="card-body">
-				<form>
-					<div class="input-group form-group">
-						<div class="input-group-prepend">
-							<span class="input-group-text"><i class="material-icons">account_box</i></span>
+			<div class="col-md-5">
+				<div class="login-form">
+					<img src="assets/images/logo-edusure.png" alt="" />
+					<h3>Please sign in to start with.</h3>
+					<div class="filled-form">
+						<div class="form-group">
+							<label>User Name</label>
+							<input matInput  type="text" class="form-control"  placeholder="Username" [(ngModel)]="username" name="username"  placeholder="Enter your Email/Phone Number" required>
 						</div>
-						<input matInput  type="text" class="form-control"  placeholder="Username" [(ngModel)]="username" name="username"  required>
-						
-					</div>
-					<div class="input-group form-group">
-						<div class="input-group-prepend">
-							<span class="input-group-text"><i class="material-icons">vpn_key</i></span>
+						<div class="form-group">
+							<label>Password</label><a href="#" class="forget-pass">Forgot Password?</a>
+							<input matInput type="password" class="form-control" placeholder="password" [(ngModel)]="password" name="password" placeholder="********" required>
 						</div>
-						<input matInput type="password" class="form-control" placeholder="password" [(ngModel)]="password" name="password" required>
+						<p class="text-center">
+							<button type="button" class="btn-login" (click)="login()">Let me in</button>	
+						</p>
+						<p class="text-center"><a class="forget-pass dont" [routerLink]="['/registeruser']" (click)="registerUser()">Don't have an account? Sign Up</a></p>
 					</div>
-					<div class="row align-items-center remember">
-						<input type="checkbox">Remember Me
-					</div>
-					<div class="form-group">
-						<button class="btn float-right login_btn" (click)="login()">Login</button>
-					</div>
-				</form>
-			</div>
-			<div class="card-footer">
-				<div class="d-flex justify-content-center links">
-					Don't have an account?<a  [routerLink]="['/registeruser']" (click)="registerUser()">Sign Up</a>
 				</div>
-				<div class="d-flex justify-content-center">
-					<a href="#">Forgot your password?</a>
+				<div class="flex-footer">
+					<p>Copyrights, 2019 C2LBizAll Rights Reserved,</p> <a href="#" class="forget-pass">Terms and conditions</a>
 				</div>
 			</div>
 		</div>
-			
-
-    	</div>
-
 	</div>
 </div>
 </body>
