--- a/WEB/src/app/public/license/license.component.html
+++ b/WEB/src/app/public/license/license.component.html
@@ -1,43 +1,59 @@
-<header class="container-fluid top-header d-flex align-items-center">
-    <div class="w-100">
-        <div class="row clearfix">
-            <div class="col-lg-12 ">
-                    <a class="logo " href="#"><img src="assets/images/logo.png" alt=""></a>
-                    <ul class="login-info">
-                        <li></li>
-                    </ul>
-                </div> 
+<body class="login-container">
+    <div class="d-flex align-items-stretch">
+        <div class="container-fluid">
+            <div class="row clearfix">
+                <div class="col-md-6 slider d-flex align-items-center" [ngStyle]="{background: 'url(./assets/images/login.jpg) left bottom no-repeat'}">
+                    <div class="welcome-text">
+                        <h3>Welcome</h3>
+                        <p>Grow yours business with us. Over 38,742 + insurance professionals already are.
+                            <br><br>Contact 24x7 toll free number.</p>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="login-form">
+                        <img src="assets/images/logo-edusure.png" alt="" />
+                        <h3>Enter Your License</h3>
+                        <div class="filled-form">
+                            <div class="row clearfix">
+                                <div class="col-md-3">
+                                    <div class="form-group">
+                                        <input matInput type="text" class="form-control" 
+                                        [(ngModel)]="licnkey.param1" name="username" placeholder="****"
+                                            required>
+                                    </div>
+                                </div>
+                                <div class="col-md-3">
+                                    <div class="form-group">
+                                        <input matInput type="text" class="form-control"
+                                            [(ngModel)]="licnkey.param2" name="param2" placeholder="****" required>
+                                    </div>
+                                </div>
+                                <div class="col-md-3">
+                                    <div class="form-group">
+                                
+                                        <input matInput type="text" class="form-control"
+                                        [(ngModel)]="licnkey.param3" name="param3" placeholder="****" required>
+                                    </div>
+                                </div>
+                                <div class="col-md-3">
+                                    <div class="form-group">
+                                        <input matInput type="text" class="form-control"
+                                            [(ngModel)]="licnkey.param4" name="param4" placeholder="****" required>
+                                    </div>
+                                </div>
+                                <p class="text-center">
+                                    <button type="button" class="btn-login" (click)="registerProduct()">Register
+                                        Product</button>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="flex-footer">
+                        <p>Copyrights, 2019 EduSure Rights Reserved,</p> <a href="#" class="forget-pass">Terms and
+                            conditions</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
-</header>
-<mat-card>
-    <mat-toolbar>Enter Your License</mat-toolbar>
-    <table style="width:100%" cellspacing="0">
-        <tr>
-            <td>
-                <mat-form-field appearance="outline">
-                    <input matInput [(ngModel)]="licnkey.param1" required>
-                </mat-form-field>
-            </td>
-            <td>
-                <mat-form-field appearance="outline">
-                    <input matInput [(ngModel)]="licnkey.param2" required>
-                </mat-form-field>
-            </td>
-            <td>
-                <mat-form-field appearance="outline">
-                    <input matInput [(ngModel)]="licnkey.param3" required>
-                </mat-form-field>
-            </td>
-            <td>
-                <mat-form-field appearance="outline">
-                    <input matInput [(ngModel)]="licnkey.param4" required>
-                </mat-form-field>
-            </td>
-        </tr>
-    </table>
-
-    <mat-card-actions class="col-md-5 col-lg-6 text-right pull-right">
-        <button mat-raised-button (click)="registerProduct()" color="primary">Validate License</button>
-    </mat-card-actions>
-</mat-card>
+</body>
