--- a/WEB/src/app/public/license/license.component.scss
+++ b/WEB/src/app/public/license/license.component.scss
@@ -1,8 +1,47 @@
-.example-container {
-    display: flex;
-    flex-direction: column;
+
+html,body{
+  background-color: #FFFFFF;
+  height: 100%;
+  font-family: 'Poppins', sans-serif;
   }
   
-  .example-container > * {
-    width: 100%;
+  /* .container-fluid, .login-container, .login-container .row, .login-container .col-lg-8{
+    height: 100%;
+  }
+   */
+  .login-container  .container-fluid, .login-container .row, .login-container .d-flex{height: 100%;}
+  
+  
+  
+  .slider{  background-size: cover;height:100%;}
+  
+  .signin h2 {margin:0 0 25px; text-align:left; font-size: 1.6rem;}
+  .login-form{padding:50px   20px;}
+  .login-form h3{color:#2F3341; font-size:18px; font-weight:500; margin:20px 0 30px 0}
+  .login-form .form-control{color:#9C9C9C; font-size:14px; border-color:#CBCBCB; border-radius:3px;} 
+  .login-form  label{color:#252525; font-size:14px;}
+  .forget-pass{color:#ED683D; float:right; font-size:14px;}
+  
+  .btn-login{background:#ED683D; padding:10px 60px; border-radius:40px; color:#FFFFFF; font-size:16px; border:0; margin:50px 0 30px 0}
+  .btn-center{float:none; display:inline-block;}
+  
+  .welcome-text{float: right;  padding-left: 57%;}
+  .welcome-text h3{color:#fff; font-size:24px; font-weight:500;}
+  .welcome-text p{color:#fff; font-size:18px;}
+  
+  .flex-footer{position:absolute; left:0; bottom:0; width:100%; border-top:1px solid #999999; color:#999999; font-size:12px;padding:20px 30px 5px 30px}
+  .flex-footer .forget-pass{font-size:12px; }
+  .flex-footer p{display:inline-block}
+  .dont{float:none;}
+  
+  /* MOBILE LAYOUT (PORTRAIT/320PX) ----------------------------------------------- */
+  @media only screen and (max-width: 767px) { 
+    .forget-pass{float:none; display:inline-block; margin-top:15px;}
+    .flex-footer{position:static; text-align:center;}
+    .flex-footer p{display:block; }
+    .flex-footer .forget-pass{float:none; display:inline-block; margin-top:0}
+    .flex-footer{padding:20px 10px;}
+    .slider{display:none !important;}
+    .login-form{padding:0}
+    .btn-login{margin:  0}
   }
