--- a/WEB/src/app/public/register/register.component.html
+++ b/WEB/src/app/public/register/register.component.html
@@ -5,8 +5,8 @@
                 <div class="col-md-7 slider d-flex align-items-center" [ngStyle]="{background: 'url(./assets/images/login.jpg) left bottom no-repeat'}">
                     <div class="welcome-text">
                         <h3>Welcome</h3>
-                        <p>Grow yours business with us. Over 38,742 + insurance professionals already are. 
-                        <br><br>Contact 24x7 toll free number.</p>
+                        <p>Grow yours business with us. Over 38,742 + insurance professionals already are.
+                            <br><br>Contact 24x7 toll free number.</p>
                     </div>
                 </div>
                 <div class="col-md-5">
@@ -14,41 +14,74 @@
                         <img src="assets/images/logo-edusure.png" alt="" />
                         <h3>Please sign in to start with.</h3>
                         <div class="filled-form">
-                            <div class="form-group">
-                                <label>User Name</label>
-                                <input matInput  type="text" class="form-control"   [(ngModel)]="login.userName" name="login.userName"  placeholder="Enter your User Name" required>
+                            <div class="row clearfix">
+                                <div class="col-md-4">
+                                    <div class="form-group">
+                                            <label>User Role</label>
+                                        <input type="text" placeholder="Role" class="form-control" list="roles"
+                                            [(ngModel)]="role" (change)="onChangeRole(role)" />
+                                        <datalist id="roles">
+                                            <option *ngFor="let role of roles" [value]="role">{{role}}</option>
+                                        </datalist>
+                                    </div>
+                                </div>
+                                <div class="col-md-4">
+                                    <div class="form-group">
+                                        <label>User Name</label>
+                                        <input matInput type="text" class="form-control" [(ngModel)]="login.userName"
+                                            name="login.userName" placeholder="Enter your User Name" required>
+                                    </div>
+                                </div>
+                                <div class="col-md-4">
+                                    <div class="form-group">
+                                        <label>Password</label>
+                                        <input matInput type="password" class="form-control" [(ngModel)]="login.password"
+                                            name="login.password" placeholder="Enter your Password" required>
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <label>First Name</label>
+                                        <input matInput type="text" class="form-control" [(ngModel)]="user.firstname"
+                                            name="user.firstname" placeholder="Enter your First Name" required>
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <label>Last Name</label>
+                                        <input matInput type="text" class="form-control" [(ngModel)]="user.lastname"
+                                            name="user.lastname" placeholder="Enter your Last Name" required>
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <label>Phone Number</label>
+                                        <input matInput type="text" class="form-control" [(ngModel)]="user.mobileno"
+                                            name="user.mobileno" placeholder="Enter your Phone Number" required>
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <label>Email</label>
+                                        <input matInput type="text" class="form-control" [(ngModel)]="user.email" name="user.email"
+                                            placeholder="Enter your Email" required>
+                                    </div>
+                                </div>
+                                <p class="text-center">
+                                    <button type="button" class="btn-login" (click)="confirmRegisterUser()">Register</button>
+                                </p>
+                                <p class="text-center"><a class="forget-pass dont" [routerLink]="['login']">Already
+                                        have an account?Login</a></p>
+
                             </div>
-                            <div class="form-group">
-                                <label>Password</label>
-                                <input matInput type="password" class="form-control" [(ngModel)]="login.password" name="login.password" placeholder="Enter your Password" required>
-                            </div>
-                            <div class="form-group">
-                                <label>First Name</label>
-                                <input matInput type="text" class="form-control"  [(ngModel)]="user.firstname" name="user.firstname" placeholder="Enter your First Name" required>
-                            </div>
-                            <div class="form-group">
-                                <label>Last Name</label>
-                                <input matInput type="text" class="form-control"  [(ngModel)]="user.lastname" name="user.lastname" placeholder="Enter your Last Name" required>
-                            </div>
-                            <div class="form-group">
-                                <label>Phone Number</label>
-                                <input matInput type="text" class="form-control"  [(ngModel)]="user.mobileno" name="user.mobileno" placeholder="Enter your Phone Number" required>
-                            </div>
-                            <div class="form-group">
-                                <label>Email</label>
-                                <input matInput type="text" class="form-control"  [(ngModel)]="user.email" name="user.email" placeholder="Enter your Email" required>
-                            </div>
-                            <p class="text-center">
-                                <button type="button" class="btn-login" (click)="confirmRegisterUser()">Register</button>	
-                            </p>
-                            <p class="text-center"><a  class="forget-pass dont" [routerLink]="['login']">Already have an account?Login</a></p>
                         </div>
                     </div>
                     <div class="flex-footer">
-                        <p>Copyrights, 2019 C2LBizAll Rights Reserved,</p> <a href="#" class="forget-pass">Terms and conditions</a>
+                        <p>Copyrights, 2019 C2LBizAll Rights Reserved,</p> <a href="#" class="forget-pass">Terms and
+                            conditions</a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    </body>
+</body>
